# taskforge

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PROJECT.md  README.md
.cursor/rules/: cursor-rules.mdc
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  ci.yml.disabgled
.sqlx/: query-2ff7294622464eef1a45854b5e7f653b0647f0ad2cc2112678202f0ba7a954dd.json  query-f14c77a90e4a81f0b84576b93645e5ce4b0cd0577433018c9268666a205ec3b8.json
docs/api/: API.md
docs/architecture/: ARCHITECTURE.md
docs/contributing/: CONTRIBUTING.md
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/setup/: SETUP.md
migrations/: 20250516151345_init.sql  20250516151346_create_tasks.sql  20250516151347_add_user_id_to_tasks.down.sql  20250516151347_add_user_id_to_tasks.sql  20250516151348_rename_created_by_to_user_id_column.down.sql  20250516151348_rename_created_by_to_user_id_column.sql  20250516151349_add_index_on_tasks_user_id.down.sql  20250516151349_add_index_on_tasks_user_id.sql
scripts/: setup_db.sh  setup_dev.sh
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  security.rs  tasks.rs
src/auth/: extractors.rs  middleware.rs  mod.rs  password.rs  token.rs
src/models/: mod.rs  task.rs  user.rs
src/routes/: auth.rs  health.rs  mod.rs  tasks.rs
tests/: auth.rs  tasks.rs
