[package]
name = "taskforge"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance, real-time collaborative task management system"
license = "MIT"
repository = "https://github.com/yourusername/taskforge"
readme = "README.md"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
test-log = "0.2"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
