[package]
name = "taskforge"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance, real-time collaborative task management system"
license = "MIT"
repository = "https://github.com/yourusername/taskforge"
readme = "README.md"

[dependencies]
actix-cors = "0.6"
actix-web = "4.11.0"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
jsonwebtoken = "9.2"
log = "0.4"
regex = "1.10"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
actix-rt = "2.9"
actix-http = "3.3"
pretty_assertions = "1.4"
test-log = "0.2"
reqwest = { version = "0.11", features = ["json"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
